--- a/templates/list_item_description/index.html.twig
+++ b/templates/list_item_description/index.html.twig
@@ -18,5 +18,6 @@
 		<a href="/list/item/done/{{ task_id }}" class="btn btn-primary">Done</a>
 	{% endif %}
 	<a href="/list/item/delete/{{ task_id }}" style="float: right" class="btn btn-danger">Delete</a>
+	<a href="/" class="btn btn-secondary">Back</a>
 </div>
 {% endblock %}
